# leadconverter-pro

./: .dockerignore  .env  .env.docker  .env.example  .env.example.ini  .env.local  .gitattributes  .gitignore  Makefile  README.md  alembic.ini  backend_log.txt  docker-compose.override.yml  docker-compose.yml  package-lock.json  requirements.txt
backend/: .env.docker  Dockerfile  alembic.ini  celery_worker.py  database.py  docker-compose.override.yml  entrypoint.sh  initial_data.py  main.py  models.py  pyproject.toml  requirements.txt  tasks.py
backend/alembic/: env.py  script.py.mako
backend/api/: deps.py  leads.py
backend/app/: database.py  initial_data.py  main.py  models.py  otel.py
backend/core/: config.py  logging.py
backend/crud/: __init__.py  crud.py  crud_dashboard.py  crud_lead.py  crud_lead_event.py  crud_quiz.py  crud_quiz_event.py  dashboard.py
backend/db/: base.py  init_db.py
backend/domain/: __init__.py  estimate.py  lead_event.py
backend/migrations/: env.py
backend/models/: __init__.py  lead.py  lead_event.py  plan.py  quiz.py  quiz_event.py  subscription.py
backend/schemas/: __init__.py  dashboard.py  estimate.py  history.py  lead.py  quiz.py  quiz_event.py  schemas.py
backend/scripts/: entrypoint.sh
backend/services/: ai.py  billing.py  estimate_service.py  grpc_client.py  lead_calculator.py  notification_service.py  pdf_generator.py  tasks.py
backend/templates/: lead_pdf.html
backend/tests/: conftest.py  test_crud.py  test_estimate_service.py  test_health.py  test_lead_calculator.py  test_lead_service_contract.py  (+2 more)
(+151 files in other folders)
